--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
   <body>
     <div class="main-container">
       <div class="firstcontainer">
-        <h3 class="logo">Mmdn</h3>
+        <!-- <h3 class="logo">Mmdn</h3> -->
+        <div class="logo-box">
+          <img class="logo" src="./Asstes/mdn logo blue.svg" alt="" />
+          <p class="logo-text">mdn</p>
+        </div>
+        <!-- <img class="logo" src="./Asstes/MDN_Web_Docs_logo.svg.png" alt=""> -->
         <ul>
           <li>References</li>
           <li>Guides</li>
@@ -35,7 +40,7 @@
 
       <div class="second-container">
         <button class="theme">
-          <i class="fa-solid fa-circle-half-stroke "></i>
+          <i class="fa-solid fa-circle-half-stroke"></i>
           theme
         </button>
 
