navbar update and making body

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Oxygen&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@200&display=swap"
       rel="stylesheet"
     />
     <link
@@ -20,6 +22,12 @@
     />
   </head>
   <body>
+    <div class="info">
+      <p>
+        Get real-time assistance with your coding queries. Try
+        <span class="ai-help">AI Help</span> now!
+      </p>
+    </div>
     <div class="main-container">
       <div class="firstcontainer">
         <!-- <h3 class="logo">Mmdn</h3> -->
@@ -48,6 +56,18 @@
         <button class="login">Login</button>
         <button class="signup">Sign up for free</button>
       </div>
+      <i class="fa-solid fa-bars fa-2xl bar-icon"></i>
     </div>
+    <section class="main-background">
+      <p class="main-heading">
+        Resources for <span class="Developers-span">Developers</span>,<br />
+        by Developers
+      </p>
+      <p class="sub-heading">
+        Documenting web technologies, including CSS, HTML, and JavaScript, since
+        2005.
+      </p>
+      <input type="text">
+    </section>
   </body>
 </html>
